vyre-macros/tests/ui/bad_pass_tuple_struct.stderr
error: #[vyre_pass] supports only unit structs. Fix: move pass state into explicit scheduler/context storage and declare the pass as `pub struct PassName;`.
 --> tests/ui/bad_pass_tuple_struct.rs:4:12
  |
4 | pub struct BadTupleStruct(u32);
  |            ^^^^^^^^^^^^^^
